test/fail/ztup00.v3
//@execute =0
def main() -> int {
	for (f in [
		(3, null),
		(4, main)
	]) {
	}
	return 0;
}
